<resources>

    <string name="app_name">Smart  Waste Collection</string>

    <string name="tallygo_access_token">306d2fc38585894207085de02ff2ed7a</string>
    <string name="start_tallygo">Start TallyGo</string>


    //menu buttons
    <string name="menu_top_stories"> Profile </string>
    <string name="menu_sports">  Record </string>
    <string name="menu_tech"> report generation  </string>
    <string name="menu_local"> Collection of garbage </string>
    <string name="menu_top_stories_1"> Alerts </string>
    <string name="menu_sports_1"> About Application. </string>
    <string name="menu_tech_1"> How to use App. </string>
    <string name="menu_local_1"> Contact </string>

    <string-array name="fan_labels">
        <item>@string/menu_top_stories</item>
        <item>@string/menu_local</item>
        <item>@string/menu_sports</item>
        <item>@string/menu_tech</item>
        <item>@string/menu_top_stories_1</item>
        <item>@string/menu_local_1</item>
        <item>@string/menu_sports_1</item>
        <item>@string/menu_tech_1</item>
    </string-array>

    //strings for login firebase
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <string name="draw_custom_marker_options_title">Cape Town Harbour</string>
    <string name="draw_custom_marker_options_snippet"> Smart Pakistan</string>

    <string name="access_token"> pk.eyJ1IjoibWphdmVkcmFtemFuIiwiYSI6ImNqYWlyaDNvcTIweG8yd3BkZXVnaWlmcjQifQ.I8WXoG_-gUINut700RGf0A   </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_bins">Map</string>


</resources>